# biblio

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  commit-trend-chart.html  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.sisyphus/notepads/architecture-research/: learnings.md
.sisyphus/notepads/data-model-research/: learnings.md
.sisyphus/notepads/design-system-audit/: decisions.md  issues.md  learnings.md
.specify/memory/: constitution.md
docs/superpowers/plans/: 2025-03-27-edit-context-menu.md  2026-03-22-local-media-storage.md  2026-03-27-file-context-menu.md
docs/superpowers/specs/: 2025-03-27-edit-context-menu-design.md  2026-03-22-local-media-storage-design.md  2026-03-27-file-context-menu-design.md
specs/001-file-organizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-file-organizer/checklists/: requirements-quality.md  requirements.md
specs/001-file-organizer/contracts/: tauri-commands.md
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  path_resolve.rs  schema.rs
src-tauri/src/commands/: author.rs  cache.rs  category.rs  cover.rs  file.rs  llm.rs  metadata.rs  mod.rs  processing.rs  prompts.rs  remote.rs  settings.rs  tag.rs  test_helpers.rs  validation.rs  vndb.rs
src-tauri/src/commands/file/: collections.rs  create_replace.rs  delete_move.rs  duplicates.rs  folder_import.rs  listing.rs  query_filter.rs  reanalyze.rs  search_lucky_status.rs  storage_files.rs  tests.rs  update_favorite.rs
src-tauri/src/database/: migration_2.sql  mod.rs  recovery.rs  schema.sql  seed.rs
src-tauri/src/pipeline/: archive.rs  env.rs  mod.rs  runner.rs  traits.rs  types.rs
src-tauri/src/pipeline/nodes/: archive_cover.rs  archive_list.rs  archive_unzip.rs  author_resolve.rs  cleanup_temp_dir.rs  content_llm.rs  content_sample.rs  cover_candidates_llm.rs  cover_compress.rs  duplicate_detect.rs  exif.rs  filename_llm.rs  mime.rs  mod.rs  parent_dir_author.rs  pdf_meta.rs  status_emit.rs  vision_cover_llm.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/baidu_netdisk/: auth.rs  delete.rs  download.rs  mod.rs  types.rs  upload.rs
src-tauri/src/providers/baidu_netdisk/upload/: tests.rs
src-tauri/src/providers/vndb/: mod.rs
src-tauri/src/services/: container.rs  delete_worker.rs  download_worker.rs  import_worker.rs  mod.rs  reencrypt_worker.rs  upload_worker.rs
src/components/: AiSetting.tsx  AuthorBadge.tsx  AuthorManager.tsx  CategoryDetailPage.tsx  CategoryManager.tsx  CategorySelect.tsx  CategorySidebar.tsx  ConfirmDeleteDialog.tsx  CoverPreview.tsx  DebugSetting.tsx  DeleteConfirmDialog.tsx  DropZone.tsx  DuplicateWarning.tsx  DynamicMetadataForm.tsx  EditFileDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileCard.tsx  FileContextMenu.tsx  FileDetailPage.tsx  FileEditDialog.tsx  FileList.tsx  FileListContent.tsx  FileListHeader.tsx  FilePicker.tsx  FilterEditor.tsx  FilterPanel.tsx  FilteredFileList.tsx  ImportModeSetting.tsx  ImportProgress.tsx  LoadingState.tsx  LuckyDialog.tsx  LuckyFileCards.tsx  MetadataEditor.tsx  MetadataField.tsx  MiddleEllipsis.tsx  NovelCover.tsx  NovelProcessingSetting.tsx  PaginatedPicker.tsx  ProcessingPipeline.tsx  (+16 more)
src/components/cards/: CardField.tsx  CardStatus.tsx  CollectionCard.tsx  ComicFileCard.tsx  FavoriteToggleButton.tsx  NovelFileCard.tsx  constants.ts  types.ts
src/components/cleanup/: DebugActionsSection.tsx  DuplicateGroupCard.tsx  UnusedItemsSection.tsx
src/components/file-list/: FileListContentConnected.tsx  FileListHeaderConnected.tsx  context.tsx  controller.ts  types.ts  workerHooks.ts
src/components/processing-pipeline/: ProcessingPipelineDialog.tsx  ProcessingPipelineParts.tsx  helpers.ts  types.ts
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  select.tsx  tabs.tsx  tooltip.tsx
src/config/: categoryFields.ts
src/hooks/: useFileActions.ts  useKeyboardShortcuts.ts  useView.ts
src/lib/: baidu_oauth.ts  categorySchema.ts  categoryViewConfig.ts  collectionSearch.ts  colorHash.ts  fileKind.ts  filters.ts  tauri.ts  tauriFavorite.ts  useTheme.ts
src/routes/: __root.tsx  authors.tsx  authors_.$authorId.tsx  categories.tsx  cleanup.tsx  index.tsx  prompts.tsx  tags.tsx  tags_.$tagId.tsx
src/routes/home/: -HomeOverlays.tsx
src/stores/: appStore.ts  categoryStore.ts  fileStore.ts  index.ts  remoteDeleteStore.ts  remoteDownloadStore.ts  remoteUploadStore.ts  tagStore.ts
src/types/: category.ts  file.ts  index.ts  metadata.ts  tag.ts
tests/: setup.ts
tests/benchmarks/: search.bench.ts  startup.bench.ts
tests/integration/: file.test.ts  manage.test.ts  search.test.ts  tag.test.ts
tests/unit/: CategorySidebar.test.tsx  FileList.renderIsolation.test.tsx  FileList.rootIsolation.test.tsx  FileListHeader.test.tsx  LuckyDialog.test.tsx  LuckyFileCards.test.tsx  ProcessingPipeline.authors.test.tsx  ProcessingPipeline.duplicates.test.tsx  SearchBar.test.tsx  accessibility.test.tsx  collectionSearch.test.ts  favoriteFilters.test.ts  favoriteIpc.test.ts  fileStore.test.ts  luckyFetch.test.ts  replaceInheritance.test.ts  sourceFileSize.test.ts
tests/unit/commands/: category.test.ts  file.test.ts  metadata.test.ts  tag.test.ts
