[package]
name = "biblio"
version = "0.1.0"
description = "A desktop application for organizing files by categories, tags, and searchable metadata"
authors = ["meritozh"]
edition = "2024"

[lib]
name = "biblio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
infer = "0.19"
lopdf = "0.40"
kamadak-exif = "0.6"
rig-core = "0.35"
schemars = "1"
chardet = { package = "chardet-rs", git = "https://github.com/meritozh/chardet-rust" }
encoding_rs = "0.8"
zip = "2"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
