[package]
name = "biblio"
version = "0.6.1"
description = "A desktop application for organizing files by categories, tags, and searchable metadata"
authors = ["meritozh"]
edition = "2024"

[lib]
name = "biblio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
infer = "0.19"
rig-core = "0.35"
schemars = "1"
charset-normalizer-rs = "1.1"
encoding_rs = "0.8"
zip = "2"
unrar = "0.5"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
md-5 = "0.10"
urlencoding = "2"
unicode-normalization = "0.1"
trash = "5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
