[package]
name = "biblio"
version = "0.8.3"
description = "A desktop application for organizing files by categories, tags, and searchable metadata"
authors = ["meritozh"]
edition = "2024"

[lib]
name = "biblio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
infer = "0.19"
rig-core = "0.35"
schemars = "1"
charset-normalizer-rs = "1.1"
encoding_rs = "0.8"
zip = "2"
unrar = "0.5"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
md-5 = "0.10"
urlencoding = "2"
unicode-normalization = "0.1"
trash = "5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

# Optimize the per-byte crypto/hash hot loops even in debug builds. The
# encrypted-container wrap (XChaCha20-Poly1305) and Baidu block_list (MD5) both
# stream the whole file byte-by-byte; at the default debug `opt-level = 0` the
# cipher runs ~20-100x slower (no SIMD/inlining, bounds checks everywhere),
# which made an 8 GB upload's "Encrypting" phase take ~30 min in `tauri build
# --debug`. Optimizing only these dependency crates keeps fast incremental
# compiles for our own code while restoring near-release crypto throughput.
[profile.dev.package.chacha20poly1305]
opt-level = 3
[profile.dev.package.chacha20]
opt-level = 3
[profile.dev.package.poly1305]
opt-level = 3
[profile.dev.package.md-5]
opt-level = 3

# Max-performance release build. `opt-level = 3` is already the release default,
# so the real gains come from cross-crate LTO + a single codegen unit — both
# matter most for the byte-streaming crypto/hash hot loops. Trade-off: a much
# slower release compile (one-time, only on `tauri:build`). `panic = "abort"` is
# deliberately NOT set: a panic in a Tauri command should unwind into an error
# returned to the frontend, not abort the whole app.
[profile.release]
opt-level = 3
lto = "fat"           # link-time optimization across all crates
codegen-units = 1     # optimize the whole program as one unit (slower build)
strip = "debuginfo"   # drop heavy DWARF but KEEP the symbol table, so crash reports
                      # show function names instead of `??? (biblio + offset)`
